--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ navigation_footer:
 
 menu_items:
   Home: /
-  Ensaios e Artigos: /artigos/
+  Artigos e Ensaios: /artigos/
   Multimedia: /multimedia/
   Blog: /blog/
 
